[gd_scene load_steps=3 format=3 uid="uid://bjogoe0p2sca0"]

[ext_resource type="Script" uid="uid://b5sarug0ju6st" path="res://scripts/ui/GameOverScreen.gd" id="1_ww1mp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5v3d"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="GameOverScreen" type="Panel"]
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x5v3d")
script = ExtResource("1_ww1mp")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Конец игры"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReasonLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Причина окончания игры"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Статистика:
Количество дней: 15
Итоговый капитал: 5000₽"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RetryButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 70.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Новая игра"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 130.0
offset_right = 100.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Выход в меню"
